--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
 server.port = 5000
 
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/technopark
-spring.datasource.username=magomed
-spring.datasource.password=magomed20121998
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-spring.jpa.generate-ddl=false
-                      
+spring.datasource.url= jdbc:postgresql://localhost:5432/technopark
+spring.datasource.username=postgres
+spring.datasource.password=postgres123
