--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port = 5000
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url= jdbc:postgresql://localhost:5432/docker
-spring.datasource.username=docker
-spring.datasource.password=docker
+spring.datasource.url= jdbc:postgresql://localhost:5432/technopark
+spring.datasource.username=postgres
+spring.datasource.password=123
